--- a/css/css.css
+++ b/css/css.css
@@ -483,7 +483,7 @@
 }
 .galleryContainer .slideShowContainer .imageHolder img{
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 .galleryContainer .slideShowContainer .imageHolder .captionText{
   display: none;
