--- a/css/style-pricing.css
+++ b/css/style-pricing.css
@@ -275,7 +275,7 @@ sup {
   margin-bottom: 0px;
 }
 
-.link-pro,.link-premium {
+.link-pro,.link-premium,.link-free {
   text-decoration: none !important;
 }
 
