--- a/css/dash.css
+++ b/css/dash.css
@@ -309,10 +309,10 @@
 .slider:before {
   position: absolute;
   content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
+  height: 20px;
+  width: 20px;
+  left: 5px;
+  bottom: 5px;
   background-color: white;
   -webkit-transition: .4s;
   transition: .4s;
@@ -320,6 +320,7 @@
 
 input:checked + .slider {
   background-color: #2196F3;
+  height: 30px;
 }
 
 input:focus + .slider {
@@ -335,6 +336,7 @@ input:checked + .slider:before {
 /* Rounded sliders */
 .slider.round {
   border-radius: 34px;
+  height: 30px;
 }
 
 .slider.round:before {
@@ -465,7 +467,7 @@ hr.own {
   left: 50%;
   margin-left: 130px;
   margin-top: -290px;
-
+  z-index: 40;
 }
 
 @media screen and (max-width: 767px) {
@@ -475,8 +477,8 @@ hr.own {
 }
 
 @media screen and (max-width: 768px) {
-  .project-tab .nav-link, .nav-tabs .nav-link.active {
-    font-size: 15px;
+  .project-tab .nav-link, .nav-tabs .nav-link.active, label.caption {
+    font-size: 14px;
   }
 
   .card-body {
@@ -525,7 +527,7 @@ hr.own {
 }
 
 .theme-take {
-  width: 19%;
+  /*width: 19%;*/
   display: inline-block;
   padding: 10px;
   border: 2px solid transparent;
