--- a/css/dash.css
+++ b/css/dash.css
@@ -470,13 +470,11 @@ hr.own {
   z-index: 40;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
   .mobile {
     display: none;
   }
-}
 
-@media screen and (max-width: 768px) {
   .project-tab .nav-link, .nav-tabs .nav-link.active, label.caption {
     font-size: 14px;
   }
@@ -582,7 +580,7 @@ hr.own {
 
   /* Slideshow container */
   .slideshow-container {
-    width: 259px;
+    /*width: 259px;*/
     position: relative;
     margin: auto;
   }
