--- a/css/about.css
+++ b/css/about.css
@@ -1,5 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700');
-@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css");
+@font-face { 
+  font-family: OpenSans-Regular; 
+  src: url("../fonts/OpenSans-Regular.ttf");
+} 
 
 body,
 html,
@@ -10,7 +12,7 @@ h4,
 h5,
 h6 {
   background-image: none;
-  font-family: 'Open Sans', sans-serif;
+  font-family: OpenSans-Regular;
   font-weight: 700;
 }
 
