--- a/css/dash.css
+++ b/css/dash.css
@@ -8,6 +8,15 @@
   src: url("../fonts/SourceSansPro-Bold.otf");
 } 
 
+@media screen and (max-width: 768px) {  
+  .arrow {
+    padding: 20px;
+    -ms-transform: rotate(90deg); /* IE 9 */
+    -webkit-transform: rotate(90deg); /* Safari 3-8 */
+    transform: rotate(90deg);
+  }
+}
+
 .content-premiumid {
   border-radius:0px;
 }
