--- a/css/landing.css
+++ b/css/landing.css
@@ -300,11 +300,13 @@ p,span {
 }
 
 .linkfooter {
-  color: #ffffff;
+  color: #fff;
   font-weight: 100;
-  opacity: 0.5;
+  /*opacity: 0.5;*/
 }
-
+.linkfooter > b {
+  font-weight: 700;
+}
 .linkfooter:hover {
   color: #ffffff;
   font-weight: 100;
