--- a/css/landing.css
+++ b/css/landing.css
@@ -93,7 +93,7 @@ p,span {
 .navbar {
   /*padding-top: 30px;
   padding-bottom: 30px;*/
-  background-color: #ffffff;
+  background-color: #F2F2F2;
   min-height: 80px;
   z-index: 30;
 }
@@ -110,7 +110,7 @@ p,span {
   font-size: 16px;
   margin-right: 20px;
   font-weight: bold;
-  color: #1e88f5 !important;
+  color: black !important;
 }
 
 .btn-prim-custom {
@@ -118,8 +118,10 @@ p,span {
   padding-right: 30px;
   border-radius: 50px;
   color: #ffffff;
-  background-color: #106AC7 !important;
+  background-color: #07A50A !important;
+  border-color: #07A50A;
   font-size: 16px;
+  font-weight: 700;
 }
 
 .btn-prim-custom:hover {
