--- a/css/redirect.css
+++ b/css/redirect.css
@@ -1,7 +1,9 @@
 .imagetitle{
   border-radius: 50%; 
   width:100%;
-  height:auto;
+  height:100%;
+  object-fit: cover;
+  object-position: center;
 }
 .div-imagetitle{
   width: 100px; 
@@ -26,12 +28,12 @@
 
 .galleryContainer{
   width: 100%;
-  height: 240px;
+  /*height: 240px;
   max-width: 974px;
   margin: auto;
   user-select: none;
   padding: 9px;
-  box-sizing: border-box;
+  box-sizing: border-box;*/
 }
 
 a:hover {
