--- a/css/theme.css
+++ b/css/theme.css
@@ -1,3 +1,95 @@
+.thumb-wallpaper1
+{
+  background-image: url('../image/wallpaper/bg-thumb/bg-1.png');
+  background-color :#21d4fd!important;
+  color:#fff;
+  background-repeat:no-repeat;
+  background-size:cover;
+  background-position:center;
+}
+.thumb-wallpaper2
+{
+  background-image: url('../image/wallpaper/bg-thumb/bg-2.png');
+  background-color :#21d4fd!important;
+  color:#fff;
+  background-repeat:no-repeat;
+  background-size:cover;
+  background-position:center;
+}
+.thumb-wallpaper3
+{
+  background-image: url('../image/wallpaper/bg-thumb/bg-3.png');
+  background-color :#21d4fd!important;
+  color:#fff;
+  background-repeat:no-repeat;
+  background-size:cover;
+  background-position:center;
+}
+.thumb-wallpaper4
+{
+  background-image: url('../image/wallpaper/bg-thumb/bg-4.png');
+  background-color :#21d4fd!important;
+  color:#fff;
+  background-repeat:no-repeat;
+  background-size:cover;
+  background-position:center;
+}
+.thumb-wallpaper5
+{
+  background-image: url('../image/wallpaper/bg-thumb/bg-5.png');
+  background-color :#21d4fd!important;
+  color:#fff;
+  background-repeat:no-repeat;
+  background-size:cover;
+  background-position:center;
+}
+
+.wallpaper1
+{
+  background-image: url('../image/wallpaper/bg-1.jpg');
+  background-color :#21d4fd!important;
+  color:#fff;
+  background-repeat:no-repeat;
+  background-size:cover;
+  background-position:center;
+}
+.wallpaper2
+{
+  background-image: url('../image/wallpaper/bg-2.jpg');
+  background-color :#21d4fd!important;
+  color:#fff;
+  background-repeat:no-repeat;
+  background-size:cover;
+  background-position:center;
+}
+.wallpaper3
+{
+  background-image: url('../image/wallpaper/bg-3.jpg');
+  background-color :#21d4fd!important;
+  color:#fff;
+  background-repeat:no-repeat;
+  background-size:cover;
+  background-position:center;
+}
+.wallpaper4
+{
+  background-image: url('../image/wallpaper/bg-4.jpg');
+  background-color :#21d4fd!important;
+  color:#fff;
+  background-repeat:no-repeat;
+  background-size:cover;
+  background-position:center;
+}
+.wallpaper5
+{
+  background-image: url('../image/wallpaper/bg-5.jpg');
+  background-color :#21d4fd!important;
+  color:#fff;
+  background-repeat:no-repeat;
+  background-size:cover;
+  background-position:center;
+}
+
 .colorgradient1
 {
   background-image: linear-gradient(339deg, #21d4fd, #b721ff);
@@ -259,10 +351,22 @@
   cursor: pointer;
 }
 
+.wallpapers {
+  width: 125px;
+  height: 125px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+  
 @media (max-width: 768px){
   .themes {
     width: 60.3px;
     height: 52px;
+  }
+
+  .wallpapers {
+    width: 125px;
+    height: 125px;
   }
 
   .theme-take {
