--- a/css/theme.css
+++ b/css/theme.css
@@ -1,3 +1,13 @@
+.svg-cover1
+{
+  background-image: url('../image/svg/output.svg');
+  background-color :#21d4fd!important;
+  color:#fff;
+  background-repeat:no-repeat;
+  background-size:cover;
+  background-position:center;
+}
+
 .thumb-wallpaper1
 {
   background-image: url('../image/wallpaper/bg-thumb/bg-1.png');
