--- a/css/dash.css
+++ b/css/dash.css
@@ -17,12 +17,16 @@
   }
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 3px;
+}
+
 .txt-elite {
   color: #FEB340;
 }
 
 .btn-orange {
-  background: 
 }
 
 #btn-upgrades {
