--- a/css/dash.css
+++ b/css/dash.css
@@ -24,6 +24,11 @@
 
 .txt-elite {
   color: #FEB340;
+  font-size : 18px;
+}
+
+.content-status-account{
+  font-size:14px;
 }
 
 .btn-orange {
@@ -218,7 +223,7 @@
 }
 .carddash
 {
-  margin: 0px 0 35px 0; 
+  margin: 0px 0 15px 0;
   background-color: #F6F6F6;
 }
 .view-wa {
@@ -331,7 +336,7 @@
   font-weight: 700;
   border-radius: 50px;
   border:none;
-  box-shadow: 0 1px 2px 0 rgba(75, 75, 75, 0.50);
+  /*box-shadow: 0 1px 2px 0 rgba(75, 75, 75, 0.50);*/
 }
 
 .btncreate.btn-console {
@@ -373,6 +378,7 @@
   padding: 12px 10px;
   font-size: 15px;
   font-weight: 700;
+  box-shadow: 1px 1px 3px 2px rgba(0, 0, 255, 0.2);
 }
 
 .btnbiodash {
@@ -399,6 +405,7 @@
   padding: 12px 10px;
   font-size: 15px;
   font-weight: 700;
+  box-shadow: 1px 3px 4px 1px rgba(227, 157, 49, 0.4);
 }
 
 .btnsingledash {
@@ -536,7 +543,7 @@ hr.own {
   background-color: transparent;
   border-color: transparent transparent #f3f3f3;
   border-bottom: 3px solid !important;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: bold;
 }
 .nav-item.sub-nav .nav-link.active {
