--- a/css/dash.css
+++ b/css/dash.css
@@ -354,7 +354,6 @@
   background-image: none;
   outline: 0;
   -webkit-box-shadow: none;
-  box-shadow: 1px 3px 4px 1px rgba(75, 75, 75, 0.6);
 }
 
 .btn-back{
@@ -367,6 +366,9 @@
   color: #505050;
 }
 
+.btnbio.active {
+  box-shadow: 1px 1px 3px 2px rgba(0, 0, 255, 0.2);
+}
 .btnbio {
   /*background-color: #106BC8;
   color: #ffffff;*/
@@ -378,7 +380,6 @@
   padding: 12px 10px;
   font-size: 15px;
   font-weight: 700;
-  box-shadow: 1px 1px 3px 2px rgba(0, 0, 255, 0.2);
 }
 
 .btnbiodash {
@@ -405,6 +406,8 @@
   padding: 12px 10px;
   font-size: 15px;
   font-weight: 700;
+}
+.btnsingle.active{
   box-shadow: 1px 3px 4px 1px rgba(227, 157, 49, 0.4);
 }
 
@@ -484,9 +487,9 @@
 .slider:before {
   position: absolute;
   content: "";
-  height: 20px;
-  width: 20px;
-  left: 5px;
+  height: 14px;
+  width: 14px;
+  left: 10px;
   bottom: 5px;
   background-color: white;
   -webkit-transition: .4s;
@@ -495,7 +498,7 @@
 
 input:checked + .slider {
   background-color: #2196F3;
-  height: 30px;
+  height: 24px;
 }
 
 input:focus + .slider {
@@ -511,7 +514,7 @@ input:checked + .slider:before {
 /* Rounded sliders */
 .slider.round {
   border-radius: 34px;
-  height: 30px;
+  height: 24px;
 }
 
 .slider.round:before {
